# XBLScrapper

./: .env.example  LICENSE  README.md  pyproject.toml
src/: config.py  logger.py  main.py
