[project]
name = "xblscrapper"
version = "0.1.0"
description = "XBLScrapper is a Python tool for collecting a list of friends from an initial gamertag on Xbox Live (Xbox Network)."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
package-mode = false
